@@ -1,10 +1,13 @@
-<!-- Automagically generated by the ToDo program on 03/30/05, 08:29 -->
+<!-- Automagically generated by the ToDo program on 2005-03-31 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
     <note priority="high" time="1112189373">
         Add --with-cat= for only displaying packages in a certain category. Could work with -p and -pd.
+    </note>
+    <note priority="medium" time="1112255697">
+        Maybe write a categories_T class? maybe write a portage_tree_T class and incorporate categories_T/metadatas_T?
     </note>
     <note priority="verylow" time="1112186406">
         IDEA: maybe make it possible for the user to specify 'herdstat -m' with no arguments IF currently inside a package's directory.
